# Realtime-Collaborative-Text-Editor-in-Rust

./: Cargo.toml  README.md
src/: main.rs
static/: index.html
